--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="node_modules/@webcomponents/custom-elements/custom-elements.min.js"></script>
 
     <!-- Imports custom element -->
-    <script type="module" src="../components/chuck-norris-fact.js"></script>
+    <script type="module" src="chuck-norris-fact.js"></script>
 </head>
 <body>
     <!-- Runs custom element -->
