--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Chuck norris Facts</title>
+    <title>Chuck norris Fact Element</title>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Import pollyfill-->
     <script src="node_modules/@webcomponents/custom-elements/custom-elements.min.js"></script>
 
@@ -11,8 +13,19 @@
     <script type="module" src="./chuck-norris-fact.js"></script>
 </head>
 <body>
-    <!-- Runs custom element -->
-    <chuck-norris-fact ></chuck-norris-fact>
-    <chuck-norris-fact category="animal"></chuck-norris-fact>
+<div class="container">
+    <div class="row">
+        <div class="col-3"><b>Random Chuck Norris fact:</b></div>
+        <div class="col-9">
+            <chuck-norris-fact></chuck-norris-fact>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3"><b>Animal categorized Chuck Norris fact:</b></div>
+        <div class="col-9">
+            <chuck-norris-fact category="animal"></chuck-norris-fact>
+        </div>
+    </div>
+</div>
 </body>
 </html>
