Small sonarlint fixes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Chuck norris Fact Element</title>
@@ -15,13 +15,13 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-3"><b>Random Chuck Norris fact:</b></div>
+        <div class="col-3"><strong>Random Chuck Norris fact:</strong></div>
         <div class="col-9">
             <chuck-norris-fact></chuck-norris-fact>
         </div>
     </div>
     <div class="row">
-        <div class="col-3"><b>Animal categorized Chuck Norris fact:</b></div>
+        <div class="col-3"><strong>Animal categorized Chuck Norris fact:</strong></div>
         <div class="col-9">
             <chuck-norris-fact category="animal"></chuck-norris-fact>
         </div>
